# AntiPerforceReadOnly

./: CMakeLists.txt  README.md
src/: gui.cpp  gui.h  main.cpp
